# thoth

./: .gitignore  .thothignore  CONTRIBUTING.md  CONTRIBUTING.vi.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.vi.md  RESEARCH.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  memory_drift.yml
.github/workflows/: ci.yml  npm-release.yml  release.yml
crates/thoth/: Cargo.toml
crates/thoth-cli/: Cargo.toml
crates/thoth-cli/assets/: USER.md.template  chroma_sidecar.py  hooks.json  mcp.json  rules.default.toml  thoth-statusline.sh
crates/thoth-cli/assets/hooks/: claude-code.json  mcp.json
crates/thoth-cli/assets/skills/memory-discipline/: SKILL.md
crates/thoth-cli/assets/skills/thoth/: SKILL.md
crates/thoth-cli/assets/skills/thoth-cli/: SKILL.md
crates/thoth-cli/assets/skills/thoth-debugging/: SKILL.md
crates/thoth-cli/assets/skills/thoth-exploring/: SKILL.md
crates/thoth-cli/assets/skills/thoth-guide/: SKILL.md
crates/thoth-cli/assets/skills/thoth-impact-analysis/: SKILL.md
crates/thoth-cli/assets/skills/thoth-refactoring/: SKILL.md
crates/thoth-cli/assets/skills/thoth-reflect/: SKILL.md
crates/thoth-cli/src/: archive_cmd.rs  compact.rs  daemon.rs  daemon_cmd.rs  hooks.rs  index_cmd.rs  lesson_cmd.rs  main.rs  memory_cmd.rs  migrate.rs  migration.rs  mine_cmd.rs  override_cmd.rs  query_cmd.rs  resolve.rs  review.rs  rule_cmd.rs  setup.rs  stats_cmd.rs  watch_cmd.rs  workflow_cmd.rs
crates/thoth-cli/tests/: compact_test.rs  hooks_test.rs  migrate_test.rs  override_lifecycle.rs  rule_check_overlap.rs  rule_compile_ignore.rs  rule_list_layers.rs  setup_test.rs  stats_output.rs
crates/thoth-core/: Cargo.toml
crates/thoth-core/src/: error.rs  event.rs  lib.rs  memory.rs  mode.rs  provider.rs  query.rs
crates/thoth-domain/: Cargo.toml
crates/thoth-domain/src/: asana.rs  error.rs  file.rs  ingest.rs  lib.rs  notebooklm.rs  notion.rs  redact.rs  snapshot.rs  sync.rs  types.rs
crates/thoth-domain/tests/: sync.rs
crates/thoth-embed/: Cargo.toml
crates/thoth-embed/src/: cohere.rs  http.rs  lib.rs  openai.rs  voyage.rs
crates/thoth-embed/tests/: embed_smoke.rs
crates/thoth-graph/: Cargo.toml
crates/thoth-graph/src/: lib.rs
crates/thoth-graph/tests/: graph_smoke.rs
crates/thoth-mcp/: Cargo.toml
crates/thoth-mcp/src/: lib.rs  main.rs  proto.rs  sanitize.rs  server.rs
crates/thoth-mcp/tests/: gate_danger_rules.rs  gate_require_inject.rs  gate_require_recall.rs  rpc.rs  socket.rs
crates/thoth-memory/: Cargo.toml
crates/thoth-memory/src/: background_review.rs  cap.rs  config.rs  lesson_clusters.rs  lesson_matcher.rs  lib.rs  manager.rs  outcome_harvest.rs  override.rs  promotion.rs  reflection.rs  rules.rs  text_sim.rs  workflow.rs  working.rs
crates/thoth-memory/tests/: forget_pass.rs  promotion_e2e.rs  workflow_phase4a.rs  workflow_phase4b.rs
crates/thoth-parse/: Cargo.toml
crates/thoth-parse/src/: language.rs  lib.rs  walk.rs  watch.rs
crates/thoth-parse/tests/: smoke.rs
crates/thoth-retrieve/: Cargo.toml
crates/thoth-retrieve/benches/: recall.rs
crates/thoth-retrieve/src/: config.rs  enrich.rs  indexer.rs  lib.rs  retriever.rs
crates/thoth-retrieve/src/synth/: mod.rs
crates/thoth-retrieve/tests/: e2e.rs  purge.rs  recall_accuracy.rs
crates/thoth-store/: Cargo.toml
crates/thoth-store/benches/: graph_bfs.rs  kv_ops.rs
crates/thoth-store/src/: archive.rs  chroma.rs  episodes.rs  fts.rs  kv.rs  lib.rs  markdown.rs  vector.rs  vector_lance.rs
crates/thoth-store/tests/: smoke.rs  vector_contract.rs
crates/thoth-synth/: Cargo.toml
crates/thoth-synth/src/: anthropic.rs  lib.rs
crates/thoth/src/: lib.rs
crates/thoth/tests/: roundtrip.rs
docs/: ARCHITECTURE.md  DESIGN.md  thoth-architecture.html
docs/adr/: 0001-domain-memory.md
eval/: gold.toml
packaging/homebrew/: README.md  bump.sh  thoth.rb
packaging/npm/: README.md  publish-local.sh  publish.sh
packaging/npm/platform-stubs/template/: package.json
packaging/npm/thoth/: package.json
packaging/npm/thoth-cc/: package.json
packaging/npm/thoth-cc/scripts/: postinstall.js
packaging/npm/thoth-memory/: package.json
packaging/npm/thoth-memory/scripts/: postinstall.js
packaging/npm/thoth/scripts/: postinstall.js
plugins/thoth-discipline/: README.md  README.vi.md
plugins/thoth-discipline/.claude-plugin/: plugin.json
plugins/thoth-discipline/hooks/: hooks.json
plugins/thoth-discipline/skills/memory-discipline/: SKILL.md
plugins/thoth-discipline/skills/thoth-reflect/: SKILL.md
scripts/: install-local.sh  local-smoke.sh
tests/: enforcement-smoke.sh
