[package]
name = "thoth-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedder adapters for Thoth (Voyage, OpenAI, Cohere, ...). Feature-gated."

[features]
default = []
# Any provider feature pulls in reqwest.
voyage  = ["dep:reqwest"]
openai  = ["dep:reqwest"]
cohere  = ["dep:reqwest"]

[dependencies]
thoth-core   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }

reqwest      = { workspace = true, optional = true }
