[package]
name = "thoth-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedder adapters for Thoth (Voyage, OpenAI, Cohere, ...). Feature-gated."

[features]
default = []
# Any provider feature pulls in reqwest.
voyage  = ["dep:reqwest"]
openai  = ["dep:reqwest"]
cohere  = ["dep:reqwest"]

[dependencies]
thoth-core   = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }

reqwest      = { workspace = true, optional = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock     = "0.6"
serde_json   = { workspace = true }
