[package]
name = "thoth-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Symbol / call / import graph built on top of thoth-store's KV."

[dependencies]
thoth-core   = { workspace = true }
thoth-store  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = { workspace = true }
