[package]
name = "thoth-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) stdio server for Thoth — plug-and-play for Claude Agent SDK / Claude Code / Cowork."

[[bin]]
name = "thoth-mcp"
path = "src/main.rs"

[[bin]]
name = "thoth-gate"
path = "src/bin/gate.rs"

[lib]
name = "thoth_mcp"
path = "src/lib.rs"

[dependencies]
thoth-core     = { workspace = true }
thoth-parse    = { workspace = true }
thoth-store    = { workspace = true }
thoth-retrieve = { workspace = true }
thoth-memory   = { workspace = true }

tokio                = { workspace = true, features = ["io-std", "signal", "net"] }
anyhow               = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
time                 = { workspace = true }
uuid                 = { workspace = true }

# Used only by the `thoth-gate` binary — direct SQLite query against
# episodes.db without going through the MCP server. Keeping it here
# (rather than a new crate) avoids another link step.
rusqlite             = { workspace = true }
toml                 = { workspace = true }

[dev-dependencies]
tempfile             = { workspace = true }
