[package]
name = "thoth-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Memory lifecycle: markdown curator, skills manager, nudge loop, TTL decay."

[dependencies]
thoth-core   = { workspace = true }
thoth-store  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
time         = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Needed by the decay-eviction test to hand-age an episode row via SQL.
rusqlite     = { workspace = true }
uuid         = { workspace = true }
