[package]
name = "thoth-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "tree-sitter wrapper, AST-aware chunking, file discovery and watching for Thoth."

[features]
# Users compile Thoth with the languages they care about.
default       = ["lang-rust", "lang-python"]
lang-rust     = ["dep:tree-sitter-rust"]
lang-python   = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go       = ["dep:tree-sitter-go"]

[dependencies]
thoth-core   = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
tracing      = { workspace = true }
blake3       = { workspace = true }
time         = { workspace = true }

# Parser core
tree-sitter            = "0.23"

# Grammars — all optional, selected by feature flags.
# Grammar crates track tree-sitter ABI; 0.23.x matches core 0.23.
tree-sitter-rust       = { version = "0.23", optional = true }
tree-sitter-python     = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go         = { version = "0.23", optional = true }

# File discovery + change watching
ignore = "0.4.23"
notify = "6.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = { workspace = true }
