[package]
name = "thoth-retrieve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hybrid retrieval orchestrator for Thoth — Mode::Zero and Mode::Full."

[dependencies]
thoth-core   = { workspace = true }
thoth-parse  = { workspace = true }
thoth-store  = { workspace = true }
thoth-graph  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
blake3       = { workspace = true }
parking_lot  = { workspace = true }
futures      = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = { workspace = true }
