[package]
name = "thoth-retrieve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hybrid retrieval orchestrator for Thoth — Mode::Zero and Mode::Full."

[features]
default   = []
anthropic = ["dep:reqwest", "dep:async-trait"]

[dependencies]
thoth-core   = { workspace = true }
thoth-parse  = { workspace = true }
thoth-store  = { workspace = true }
thoth-graph  = { workspace = true }
thoth-domain = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
blake3       = { workspace = true }
serde_json   = { workspace = true }
parking_lot  = { workspace = true }
futures      = { workspace = true }

reqwest      = { workspace = true, optional = true }
async-trait  = { workspace = true, optional = true }


[dev-dependencies]
tokio       = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile    = { workspace = true }
async-trait = { workspace = true }
criterion   = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "recall"
harness = false
