[package]
name = "thoth-synth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Synthesizer adapters for Thoth (Anthropic Claude, ...). Feature-gated."

[features]
default    = []
anthropic  = ["dep:reqwest"]

[dependencies]
thoth-core   = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

reqwest      = { workspace = true, optional = true }
